# tkc-interstellar-route-planner

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: d60acfefb778_initial_tables.py
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py
app/api/v1/endpoints/: gates.py  transport.py
app/db/: session.py
app/models/: __init__.py  connection.py  gate.py
app/repositories/: gate_repository.py
app/schemas/: gate.py  transport.py
app/services/: route_service.py  transport_service.py
ops/: Dockerfile  docker-compose.yml  entrypoint.sh  setup-gcp.sh
ops/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  startup.sh  terraform.tfvars.example  variables.tf
tests/: test_route_service.py  test_transport_service.py
